# libmpc

./: .gitignore  CMakeLists.txt
demo/: quadrotor.cpp
examples/: CMakeLists.txt  quad.cpp
hakim_mpc/: CMakeLists.txt  rov_example.cpp  vanderpol_example.cpp
include/mpc/: IDimensionable.hpp
